  for files larger than its i/o buffer. (RFB)
- cli/cmdint.c: Do not display 'interrupted' message when 'more' command
  output is interrupted. (RFB)

2014-10-20
- aes/gemdos.c aes/gemdos.h desk/aesbind.h desk/deskstart.S desk/desksupp.c
  desk/desksupp.h desk/desktop.def desk/desktop.rsc include/config.h:
  Double-clicking on a file not associated with an application now gets
  a 'Show file?' prompt (if enabled via CONF_WITH_SHOW_FILE). (RFB)
- cli/cmdasm.S: Fix latent bug: a2 was not saved in assembler function. (RFB)

2014-10-22
- aes/gemfmalt.c: Fix bug: alert buttons can overlap icon in resolutions
  with 8-pixel character heights. (RFB)
- aes/gemfmalt.c: Make source formatting consistent within module. (RFB)
- aes/optimopt.S: Code cleanup: remove unused code. (RFB)
- aes/optimopt.h aes/optimopt.S include/obdefs.h: Code optimisation: make
  r_set() a macro, saves time and space. (RFB)

2014-10-23
- desk/deskmain.c: Code optimisation: don't re-sort window contents when
  sort order doesn't change. (RFB)
- desk/deskmain.c: Code cleanup: eliminate duplicate/unused #defines. (RFB)

2014-10-24
- desk/deskbind.h desk/deskdir.c desk/deskfun.c desk/deskmain.c desk/desksupp.c
  desk/deskwin.c desk/deskwin.h: Fix bug: a topped window did not always stay
  topped when the view type or sort sequence changed. (RFB)
- desk/deskmain.c desk/deskmain.h desk/desksupp.c desk/deskwin.c: Code
  cleanup: remove useless global variable 'gl_whsiztop'. (RFB)
- desk/deskmain.c: Code cleanup: remove unused local variables 'gl_defdrv'
  and 'gl_idsiztop'. (RFB)

2014-10-25
- aes/optimopt.h aes/optimopt.S include/obdefs.h: Code optimisation: make
  r_get() static inline C code, saves time and space. (RFB)
- include/obdefs.h: Replace r_set() macro with static inline function
  (safer). (RFB)

2014-10-26
- aes/gemgraf.c aes/gemoblib.c aes/optimopt.h aes/optimopt.S desk/deskgraf.c:
  Code optimisation: replace LBWMOV() with expand_string(). (RFB)