@@ -14,6 +14,4 @@
 BYTE *scasb(BYTE *p, BYTE b);
 WORD expand_string(WORD *dest, BYTE *src);
 
-/* note that the following routine is currently implemented in large.S */
-WORD LBWMOV(WORD *pdst, BYTE *psrc);
 #endif
